--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 
 # Created by https://www.gitignore.io/api/linux,macos,windows,sublimetext,visualstudiocode
 
+.gitignore.swp
+
 ### Linux ###
 *~
 
