--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,5 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/linux,macos,windows,sublimetext,visualstudiocode
+egnime-page_pointeurs.css
+
